--- a/index.html
+++ b/index.html
@@ -9,10 +9,15 @@
 <body>
     <nav>
         <ul>
+        
+            <li><a href="#">Home</a></li>
             <li><a href="#" class="active">N-Queens</a></li>
-            <li><a href="#">Sudoku Solver</a></li>
-            <li><a href="#">Knight's Tour</a></li>
-            <li><a href="#">Maze Solver</a></li>
+            <li><a href="k.html">Knight's Tour Visualization</a></li>
+            <li><a href="tree.html" class="active">Binary Tree Search</a></li>
+            <li><a href="maze-solver.html">Maze Solver</a></li>
+            <li><a href="graph-coloring.html">Graph Coloring</a></li>
+            <li><a href="subset-sum.html">Subset Sum</a></li>
+            <li><a href="h.html">Hamiltonian Cycle</a></li>
         </ul>
     </nav>
     
