--- a/tree.html
+++ b/tree.html
@@ -12,11 +12,11 @@
             <li><a href="#">Home</a></li>
             <li><a href="index.html">N-Queens</a></li>
             <li><a href="k.html">Knight's Tour Visualization</a></li>
-            <li><a href="binary-tree-search.html" class="active">Binary Tree Search</a></li>
+            <li><a href="#" class="active">Binary Tree Search</a></li>
             <li><a href="maze-solver.html">Maze Solver</a></li>
             <li><a href="graph-coloring.html">Graph Coloring</a></li>
             <li><a href="subset-sum.html">Subset Sum</a></li>
-            <li><a href="hamiltonian-cycle.html">Hamiltonian Cycle</a></li>
+            <li><a href="h.html">Hamiltonian Cycle</a></li>
         </ul>
     </nav>
     <header>
